objects/IdMatrix_SFD__c.object
<CustomObject>
    <fields>
        <fullName>Accuity_Result_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accuity Result Record</label>
        <referenceTo>IdMatrix_Accuity_Result_Record__c</referenceTo>
        <relationshipName>SFDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfd__c</fullName>
        <label>sfd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix SFD</label>
    <nameField>
        <label>SFD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix SFD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>